[gd_scene load_steps=11 format=3 uid="uid://tdccwcvnr6n6"]

[ext_resource type="Script" path="res://battle_scene.gd" id="1_d60ym"]
[ext_resource type="PackedScene" uid="uid://bgbtg6kf7fldx" path="res://UI/multiple_selection.tscn" id="2_gv645"]
[ext_resource type="PackedScene" uid="uid://disu4eq6m5gql" path="res://UI/battle_ui.tscn" id="3_rxog0"]
[ext_resource type="AudioStream" uid="uid://bhuvjnffws2yp" path="res://Assets/music1.mp3" id="4_c04rb"]
[ext_resource type="PackedScene" uid="uid://b1dm5bv2b4sjp" path="res://UI/change_scene_ui.tscn" id="4_n7iyd"]
[ext_resource type="AudioStream" uid="uid://yk4vp27q13xj" path="res://Assets/no.mp3" id="5_sth7u"]
[ext_resource type="Script" path="res://camera.gd" id="6_huhrq"]
[ext_resource type="Texture2D" uid="uid://bk21vgt5kkpu4" path="res://Assets/grass.jpg" id="7_djx3y"]

[sub_resource type="PlaneMesh" id="PlaneMesh_eifp5"]
size = Vector2(10000, 10000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r1620"]
albedo_texture = ExtResource("7_djx3y")
uv1_scale = Vector3(800, 800, 800)

[node name="BattleScene" type="Node3D"]
script = ExtResource("1_d60ym")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.34202, 0.939693, 0, 0.939693, 0.34202, -1, 1.49502e-08, -4.10753e-08, 100, 30, 0)
fov = 40.0
script = ExtResource("6_huhrq")

[node name="Terrain" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Terrain"]
mesh = SubResource("PlaneMesh_eifp5")
surface_material_override/0 = SubResource("StandardMaterial3D_r1620")

[node name="CSGBox3D" type="CSGBox3D" parent="Terrain"]
visible = false
layers = 0
use_collision = true
size = Vector3(1000, 0, 1000)

[node name="MultipleSelection" parent="." instance=ExtResource("2_gv645")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Troops" type="Node3D" parent="."]

[node name="BattleTimer" type="Timer" parent="."]

[node name="BattleFinishTimer" type="Timer" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_c04rb")
attenuation_model = 3
volume_db = 16.0
max_distance = 4096.0

[node name="BattleLost" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_sth7u")
volume_db = 35.0

[node name="ChangeSceneUI" parent="." instance=ExtResource("4_n7iyd")]

[node name="BattleUI" parent="." instance=ExtResource("3_rxog0")]

[connection signal="child_exiting_tree" from="Troops" to="." method="_on_troops_child_exiting_tree"]
